prom2teams/prom2teams-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    version: 1.0.0
  labels:
    io.service: prom2teams
  name: prom2teams
spec:
  replicas: 1
  selector:
    matchLabels:
      io.service: prom2teams
  strategy: {}
  template:
    metadata:
      annotations:
        version: 1.0.0
      labels:
        io.service: prom2teams
    spec:
      containers:
        - env:
            - name: TEAMS_INCOMING_WEBHOOK_URL
              value: <TEAMS_INCOMING_WEBHOOK_URL>
            - name: TEAMS_REQUEST_URI
              value: alertmanager
          image: quay.io/prometheusmsteams/prometheus-msteams
          name: prom2teams
          ports:
            - containerPort: 2000
          resources: {}
      hostname: prom2team
      restartPolicy: Always
status: {}
