prom2teams/prom2teams-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    version: 1.0.0
  labels:
    io.service: prom2teams
  name: prom2teams
spec:
  ports:
    - name: "2000"
      port: 2000
      targetPort: 2000
  selector:
    io.service: prom2teams
status:
  loadBalancer: {}
